Text formatting on mobile devices fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,9 @@ body{
 	
 	body {
         height:100vh;
+		margin: auto;
+	overflow-y: scroll;
+    -webkit-overflow-scrolling:touch;
     }
 
 	#name {
